--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">water_supply</string>
-    
+<!--    <external-path name="external_storage_directory" path="." />-->
 </resources>
